<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.FragmentProduto">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/editTextNomeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_do_produto"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/marca"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quatidade_de_produto"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextDataValidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/data_de_validade"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pre_o_do_produto"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/botaoSalvarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar_produto" />

    <Button
        android:id="@+id/botaoCancelarProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar_produto" />

</FrameLayout>