<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.FragmentCliente">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/editTextNomeCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/editTextCPF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/cpf" />

    <EditText
        android:id="@+id/editTextTelefoneCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/telefone" />

    <EditText
        android:id="@+id/editTextEmailCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/email" />

    <Button
        android:id="@+id/botaoSalvarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="8dp"
        android:insetTop="8dp"
        android:insetRight="8dp"
        android:insetBottom="8dp"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/botaoCancelarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="8dp"
        android:insetTop="8dp"
        android:insetRight="8dp"
        android:insetBottom="8dp"
        android:text="@string/cancelar" />

</FrameLayout>